# LibGFX-Test

./: CMakeLists.txt
LibGFXTest/: CMakeLists.txt  DefaultPipeline.cpp  DefaultPipeline.h  LibGFXTest.cpp  LibGFXTest.h  Vertex.h
Shader/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
